--- a/_posts/leetcode100/2020-11-29-leetcode-97.md
+++ b/_posts/leetcode100/2020-11-29-leetcode-97.md
@@ -62,6 +62,22 @@ Link：[https://leetcode.com/problems/interleaving-string/](https://leetcode.com
 
 ## 递归 + 记忆化搜索
 
+我其实一直在纠结如何满足```|n - m| <= 1```条件, 但其实，两个字符串互相拼接，就自然满足条件
+
+```python
+[1,2,3,4]
+
+=>
+
+[1 + 2 + 3 + 4]  # abs(4 - 3) <= 1
+[+ 1 + 2 + 3 + 4]  # abs(4 - 4) <= 1
+[+ 1 + 2 + 3 + 4 +] # abs(4 - 5) <= 1
+```
+
+例如想把上述链接起来，那么另一个要把每个元素都连接起来，
+
+i, j分别代表已经有那些字母投入匹配了
+
 ```python
 from functools import lru_cache
 class Solution:
@@ -87,6 +103,78 @@ class Solution:
                 return True
 
         return False
+```
+
+## 动态规划
+
+### 状态定义
+
+dp[i][j]定义s1的前i个字符 + s2的前j个字符和s3的前(i + j)匹配情况
+
+### 状态转移 
+
+```python
+
+"-----" + "s1[i - 1]"
+ i - 1       1
+
+"-----------"
+      j
+
+"-----" + "-----------" + "s3[i + j - 1]"
+ i - 1            j            1
+
+# 如果s1[i - 1] == s3[i + j - 1] 并且 dp[i - 1][j]
+dp[i][j] = True
+
+"-----"
+   i
+
+"-----------" + "s2[j - 1]"
+    j - 1            1
+
+"-----" + "-----------" + "s3[i + j - 1]"
+   i          j - 1             1
+
+# 如果s2[j] == s3[i + j - 1] 并且 dp[i][j - 1]
+dp[i][j] = True
+
+```
+
+### 初始条件
+
+dp[0][0] = 0, s1前0个字符+s2前0个字符与s3前(0 + 0)个字符相匹配
+
+### 计算方向
+
+矩阵由左上到右下
+
+```python
+class Solution:
+    def isInterleave(self, s1: str, s2: str, s3: str) -> bool:
+        
+        m = len(s1)
+        n = len(s2)
+        
+        if m + n != len(s3):
+            return False
+        
+        dp = [[False for j in range(n + 1)] for i in range(m + 1)]
+        
+        for i in range(m + 1):
+            for j in range(n + 1):
+                if i == 0 and j == 0:
+                    dp[0][0] = True
+                    continue
+                    
+                if i > 0 and s1[i - 1] == s3[i + j - 1] and dp[i - 1][j]:
+                    dp[i][j] = True
+                    
+                if j > 0 and s2[j - 1] == s3[i + j - 1] and dp[i][j - 1]:
+                    dp[i][j] = True
+            
+            
+        return dp[-1][-1] 
 ```
 
 --End--
