--- a/_posts/leetcode100/2020-11-29-leetcode-97.md
+++ b/_posts/leetcode100/2020-11-29-leetcode-97.md
@@ -62,7 +62,9 @@ Link：[https://leetcode.com/problems/interleaving-string/](https://leetcode.com
 
 ## 递归 + 记忆化搜索
 
-我其实一直在纠结如何满足```|n - m| <= 1```条件, 但其实，两个字符串互相拼接，就自然满足条件
+我其实一直在纠结如何满足```|n - m| <= 1```条件, 但其实，两个字符串互相拼接，就自然满足条件。
+
+这道题，挺难的，虽然2018年做了一遍，但是完全没有印象
 
 ```python
 [1,2,3,4]
@@ -172,7 +174,6 @@ class Solution:
                     
                 if j > 0 and s2[j - 1] == s3[i + j - 1] and dp[i][j - 1]:
                     dp[i][j] = True
-            
             
         return dp[-1][-1] 
 ```
