--- a/_posts/leetcode100/2020-11-29-leetcode-97.md
+++ b/_posts/leetcode100/2020-11-29-leetcode-97.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "LeetCode-97.交错字符串(Unique Binary Search Trees)"
+title: "LeetCode-97.交错字符串(Interleaving String)"
 categories: Leetcode
 tags: String Dynamic-Programming
 excerpt: ""
