--- a/_posts/leetcode100/2020-11-30-leetcode-98.md
+++ b/_posts/leetcode100/2020-11-30-leetcode-98.md
@@ -111,4 +111,28 @@ class Solution:
         return True
 ```
 
+其他语言兼容
+
+```python
+class Solution:
+    def isValidBST(self, root: TreeNode) -> bool:
+        return self.helper(root, None, None)
+        
+    def helper(self, node: TreeNode, minVal: float, maxVal: float):
+        
+        if node is None:
+            return True
+        
+        if (minVal is not None and  node.val <= minVal) or (maxVal is not None and node.val >= maxVal):
+            return False
+        
+        if not self.helper(node.left, minVal, node.val):
+            return False
+        
+        if not self.helper(node.right, node.val, maxVal):
+            return False
+        
+        return True
+```
+
 --End--
