--- a/_posts/leetcode100/2020-12-01-leetcode-99.md
+++ b/_posts/leetcode100/2020-12-01-leetcode-99.md
@@ -2,7 +2,7 @@
 layout: post
 title: "LeetCode-99.恢复二叉搜索树(Recover Binary Search Tree)"
 categories: Leetcode
-tags: 
+tags: Tree Depth-first-search
 excerpt: ""
 ---
 
@@ -50,7 +50,84 @@ excerpt: ""
 
 Link：[https://leetcode.com/problems/recover-binary-search-tree/](https://leetcode.com/problems/recover-binary-search-tree/)
 
+## 深度优先搜索
 
-//TBD
+O(N)
+
+BST的中序遍历，是一个递增序列
+
+我们需要找到，不满足递增的一组，把第一个记录下来first
+
+对于任意不满组的，始终把second记录下来
+
+交换两个记录节点的值
+
+问题是，无论递归还是非递归都用的O(N)空间复杂度
+
+### 递归代码
+
+```python
+class Solution:
+    def recoverTree(self, root: TreeNode) -> None:
+        """
+        Do not return anything, modify root in-place instead.
+        """
+        self.pre = None
+        self.firstNode = None
+        self.secondNode = None
+        self.helper(root)
+        self.firstNode.val, self.secondNode.val = self.secondNode.val, self.firstNode.val
+
+    def helper(self, node: TreeNode):
+        if node is None:
+            return
+
+        self.helper(node.left)
+        
+        if self.pre is not None and self.pre.val > node.val:
+
+            if self.firstNode is None:
+                self.firstNode = self.pre
+      
+            self.secondNode = node
+
+        self.pre = node
+        self.helper(node.right)
+```
+
+### 非递归代码
+
+```python
+class Solution:
+    def recoverTree(self, root: TreeNode) -> None:
+        """
+        Do not return anything, modify root in-place instead.
+        """
+        pre = None
+        firstNode = None
+        secondNode = None
+        stack = []
+
+        cur = root
+        while cur is not None or len(stack) > 0:
+            while cur is not None:
+                stack.append(cur)
+                cur = cur.left
+
+            node = stack.pop()
+
+            if pre is not None and pre.val > node.val:
+                if firstNode is None:
+                    firstNode = pre
+        
+                secondNode = node
+            pre = node
+
+            cur = node.right
+            
+        firstNode.val, secondNode.val = secondNode.val, firstNode.val
+```
 
 --End--
+
+那么O(1)的有没有可能呢？还真有，有个叫morris inorder traversal, 思路一致，后序单独更新到算法相关文章里面
