--- a/_posts/leetcode100/2020-12-01-leetcode-99.md
+++ b/_posts/leetcode100/2020-12-01-leetcode-99.md
@@ -84,14 +84,15 @@ class Solution:
 
         self.helper(node.left)
         
+        # do something
         if self.pre is not None and self.pre.val > node.val:
 
             if self.firstNode is None:
                 self.firstNode = self.pre
       
             self.secondNode = node
-
         self.pre = node
+        # do something
         self.helper(node.right)
 ```
 
@@ -116,18 +117,61 @@ class Solution:
 
             node = stack.pop()
 
+            # do something
             if pre is not None and pre.val > node.val:
                 if firstNode is None:
                     firstNode = pre
         
                 secondNode = node
             pre = node
+            # do something
 
             cur = node.right
             
         firstNode.val, secondNode.val = secondNode.val, firstNode.val
 ```
 
+## Morris Traversal
+
+那么使用O(1)空间有没有可能呢？还真有，有个叫morris traversal, 恢复的思路一致
+
+具体遍历，后序会单独写篇文章
+
+```python
+class Solution:
+    def recoverTree(self, root: TreeNode) -> None:
+        """
+        Do not return anything, modify root in-place instead.
+        """
+        pre = None
+        firstNode = None
+        secondNode = None
+
+        cur = root
+        while cur:
+            if cur.left:
+                tmp = cur.left
+                while tmp.right is not None and tmp.right != cur:
+                    tmp = tmp.right
+                if tmp.right is None:
+                    tmp.right, cur = cur, cur.left
+                    continue
+                    
+                tmp.right = None
+        
+            # do something
+            if pre is not None and pre.val > cur.val:
+                if firstNode is None:
+                    firstNode = pre
+
+                secondNode = cur
+            pre = cur
+            # do something
+            cur = cur.right
+            
+        firstNode.val, secondNode.val = secondNode.val, firstNode.val
+```
+
 --End--
 
-那么O(1)的有没有可能呢？还真有，有个叫morris inorder traversal, 思路一致，后序单独更新到算法相关文章里面
+
