--- a/_posts/leetcode100/2020-07-26-leetcode-18.md
+++ b/_posts/leetcode100/2020-07-26-leetcode-18.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "18. 四数之和(4Sum)"
+title: "LeetCode-18.四数之和(4Sum)"
 categories: Leetcode
 tags: Array Hash Two-pointers
 excerpt: "K-Sum终结者"
@@ -9,7 +9,7 @@ excerpt: "K-Sum终结者"
 * content
 {:toc}
 
-## 18. 4Sum
+## 18. 四数之和
 
 给定一个包含 n 个整数的数组 nums 和一个目标值 target，判断 nums 中是否存在四个元素 a，b，c 和 d ，使得 a + b + c + d 的值与 target 相等？找出所有满足条件且不重复的四元组。
 
@@ -29,6 +29,12 @@ excerpt: "K-Sum终结者"
   [-2,  0, 0, 2]
 ]
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/4sum/](https://leetcode-cn.com/problems/4sum/)
+
+Link：[https://leetcode.com/problems/4sum/](https://leetcode.com/problems/4sum/)
 
 ## 双指针
 
