--- a/_posts/leetcode100/2020-11-18-leetcode-88.md
+++ b/_posts/leetcode100/2020-11-18-leetcode-88.md
@@ -3,13 +3,13 @@ layout: post
 title: "LeetCode-88.合并两个有序数组(Merge Sorted Array)"
 categories: Leetcode
 tags: Array Two-pointers
-excerpt: ""
+excerpt: "我的战役"
 ---
 
 * content
 {:toc}
 
-## 88. 扰乱字符串
+## 88. 合并两个有序数组
 
 给你两个有序整数数组 nums1 和 nums2，请你将 nums2 合并到 nums1 中，使 nums1 成为一个有序数组。
 
