--- a/_posts/leetcode100/2020-11-19-leetcode-89.md
+++ b/_posts/leetcode100/2020-11-19-leetcode-89.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-89.格雷编码(Gray Code)"
 categories: Leetcode
 tags: Backtracking
-excerpt: ""
+excerpt: "概率游戏"
 ---
 
 * content
@@ -100,7 +100,7 @@ O(N)
 
 ```
 
-在前一个基础上天上一个0
+在前一个基础上填上一个0
 
 ```python
 0   ->    1   ->    1 + 1 = 11    ->    1 + 10 = 110
@@ -109,7 +109,7 @@ O(N)
                                         1 + 00 = 100
 ```
 
-在前一个逆序基础上天上一个1,
+在前一个逆序基础上填上一个1,
 
 第0个比较特殊，是个初始值
 
