--- a/_posts/leetcode200/2020-12-02-leetcode-102.md
+++ b/_posts/leetcode200/2020-12-02-leetcode-102.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "LeetCode-102.对称二叉树(Binary Tree Level Order Traversal)"
+title: "LeetCode-102.二叉树的层序遍历(Binary Tree Level Order Traversal)"
 categories: Leetcode
 tags: Tree Breadth-first-search
 excerpt: ""
