--- a/_posts/leetcode200/2020-12-02-leetcode-103.md
+++ b/_posts/leetcode200/2020-12-02-leetcode-103.md
@@ -1,42 +1,42 @@
 ---
 layout: post
-title: "LeetCode-102.对称二叉树(Binary Tree Level Order Traversal)"
+title: "LeetCode-103.二叉树的锯齿形层次遍历(Binary Tree Zigzag Level Order Traversal)"
 categories: Leetcode
-tags: Tree Breadth-first-search
+tags: Stack Tree Breadth-first-search
 excerpt: ""
 ---
 
 * content
 {:toc}
 
-## 102. 二叉树的层序遍历
+## 103. 二叉树的锯齿形层次遍历
 
-给你一个二叉树，请你返回其按 层序遍历 得到的节点值。 （即逐层地，从左到右访问所有节点）。
+给定一个二叉树，返回其节点值的锯齿形层次遍历。（即先从左往右，再从右往左进行下一层遍历，以此类推，层与层之间交替进行）。
 
-示例：
+例如：
+
 ```
-
-二叉树：[3,9,20,null,null,15,7],
+给定二叉树 [3,9,20,null,null,15,7],
 
     3
    / \
   9  20
     /  \
    15   7
-返回其层次遍历结果：
+返回锯齿形层次遍历如下：
 
 [
   [3],
-  [9,20],
+  [20,9],
   [15,7]
 ]
 ```
 
 来源：力扣（LeetCode）
 
-链接：[https://leetcode-cn.com/classic/problems/binary-tree-level-order-traversal](https://leetcode-cn.com/classic/problems/binary-tree-level-order-traversal)
+链接：[https://leetcode-cn.com/problems/binary-tree-zigzag-level-order-traversal/](https://leetcode-cn.com/problems/binary-tree-zigzag-level-order-traversal/)
 
-Link：[https://leetcode.com/classic/problems/binary-tree-level-order-traversal](https://leetcode.com/classic/problems/binary-tree-level-order-traversal)
+Link：[https://leetcode.com/problems/binary-tree-zigzag-level-order-traversal/](https://leetcode.com/problems/binary-tree-zigzag-level-order-traversal/)
 
 ## 广度优先搜索
 
