--- a/_posts/leetcode200/2020-12-02-leetcode-105.md
+++ b/_posts/leetcode200/2020-12-02-leetcode-105.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "LeetCode-106.从中序与后序遍历序列构造二叉树(Construct Binary Tree from Preorder and Inorder Traversal)"
+title: "LeetCode-105.从前序与中序遍历序列构造二叉树(Construct Binary Tree from Preorder and Inorder Traversal)"
 categories: Leetcode
 tags: Array Tree Depth-first-search
 excerpt: ""
@@ -9,7 +9,7 @@ excerpt: ""
 * content
 {:toc}
 
-## 106. 从中序与后序遍历序列构造二叉树
+## 105. 从前序与中序遍历序列构造二叉树
 
 根据一棵树的前序遍历与中序遍历构造二叉树。
 
