--- a/_posts/leetcode100/2020-07-27-leetcode-19.md
+++ b/_posts/leetcode100/2020-07-27-leetcode-19.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "19. 删除链表的倒数第N个节点(Remove Nth Node From End of List)"
+title: "LeetCode-19.删除链表的倒数第N个节点(Remove Nth Node From End of List)"
 categories: Leetcode
 tags: Array Hash Two-pointers
 excerpt: "K-Sum终结者"
@@ -27,6 +27,12 @@ excerpt: "K-Sum终结者"
 进阶：
 
 你能尝试使用一趟扫描实现吗？
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/](https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/)
+
+Link：[https://leetcode.com/problems/remove-nth-node-from-end-of-list/](https://leetcode.com/problems/remove-nth-node-from-end-of-list/)
 
 ## 两次扫描
 
