--- a/_posts/leetcode100/2020-11-23-leetcode-90.md
+++ b/_posts/leetcode100/2020-11-23-leetcode-90.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-90.子集 II(Subsets II)"
 categories: Leetcode
 tags: Array Backtracking
-excerpt: ""
+excerpt: "苏州也许是个不错的地方"
 ---
 
 * content
