--- a/_posts/leetcode100/2020-11-23-leetcode-91.md
+++ b/_posts/leetcode100/2020-11-23-leetcode-91.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-91.解码方法(Decode Ways)"
 categories: Leetcode
 tags: String Dynamic-programming
-excerpt: ""
+excerpt: "Carry On My Wayward Son"
 ---
 
 * content
