--- a/_posts/leetcode100/2020-07-28-leetcode-20.md
+++ b/_posts/leetcode100/2020-07-28-leetcode-20.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "20. 有效的括号(Valid Parentheses)"
+title: "LeetCode-20.有效的括号(Valid Parentheses)"
 categories: Leetcode
 tags: String Stack
 excerpt: "K-Sum终结者"
@@ -54,6 +54,12 @@ excerpt: "K-Sum终结者"
 输入: "{[]}"
 输出: true
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/valid-parentheses/](https://leetcode-cn.com/problems/valid-parentheses/)
+
+Link：[https://leetcode.com/problems/valid-parentheses/](https://leetcode.com/problems/valid-parentheses/)
 
 ## 栈
 
