--- a/_posts/leetcode100/2020-11-25-leetcode-93.md
+++ b/_posts/leetcode100/2020-11-25-leetcode-93.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-93.复原IP地址(Restore IP Addresses)"
 categories: Leetcode
 tags: String Backtracking
-excerpt: ""
+excerpt: "肖生克的救赎"
 ---
 
 * content
@@ -70,7 +70,7 @@ Link：[https://leetcode.com/problems/restore-ip-addresses/](https://leetcode.co
 
 给一个字符串, 把它转换成**一个有效ip地址**。其中ip地址有四部分组成(不能有前置0)。输出所有返回结果
 
-显然，字符串小于4位，根本无法转换成4各部分，直接排除
+显然，字符串小于4位，根本无法转换成4个部分，直接排除
 
 显然，如果字符串大于12位，分成4部分，会有一部分大于255，直接排除
 
