--- a/_posts/leetcode100/2020-11-25-leetcode-92.md
+++ b/_posts/leetcode100/2020-11-25-leetcode-92.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-92.反转链表 II(Reverse Linked List II)"
 categories: Leetcode
 tags: Linked-list
-excerpt: ""
+excerpt: "你好微软，很高兴遇到你"
 ---
 
 * content
