--- a/_posts/leetcode100/2020-11-25-leetcode-94.md
+++ b/_posts/leetcode100/2020-11-25-leetcode-94.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-94.二叉树的中序遍历(Binary Tree Inorder Traversal)"
 categories: Leetcode
 tags: Hash-table Stack Tree
-excerpt: ""
+excerpt: "一山不容二虎"
 ---
 
 * content
@@ -66,7 +66,7 @@ excerpt: ""
 
 来源：力扣（LeetCode）
 
-链接：[https://leetcode-cn.com/problems/binary-tree-inorder-traversal](https://leetcode-cn.com/problems/binary-tree-inorder-traversal/)
+链接：[https://leetcode-cn.com/problems/binary-tree-inorder-traversal](https://leetcode-cn.com/problems/binary-tree-inorder-traversal)
 
 Link：[https://leetcode.com/problems/binary-tree-inorder-traversal/](https://leetcode.com/problems/binary-tree-inorder-traversal/)
 
@@ -97,7 +97,7 @@ class Solution:
 
 O(N)
 
-这个没法解释，只能自己尝试着推导以下
+这个没法解释，只能自己尝试着推导一下
 
 首先，要输出最左边的**左节点**, 那之前的路径用stack保存下来, 用来回退到**中节点**
 
