--- a/_posts/leetcode100/2020-07-29-leetcode-21.md
+++ b/_posts/leetcode100/2020-07-29-leetcode-21.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "21. 合并两个有序链表(Merge Two Sorted Lists)"
+title: "LeetCode-21.合并两个有序链表(Merge Two Sorted Lists)"
 categories: Leetcode
 tags: Linked-list
 excerpt: "第一个回复"
@@ -18,6 +18,12 @@ excerpt: "第一个回复"
 输入：1->2->4, 1->3->4
 输出：1->1->2->3->4->4
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/merge-two-sorted-lists/](https://leetcode-cn.com/problems/merge-two-sorted-lists/)
+
+Link：[https://leetcode.com/problems/merge-two-sorted-lists/](https://leetcode.com/problems/merge-two-sorted-lists/)
 
 ## 双指针
 
