--- a/_posts/leetcode100/2020-11-26-leetcode-95.md
+++ b/_posts/leetcode100/2020-11-26-leetcode-95.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-95.不同的二叉搜索树 II(Unique Binary Search Trees II)"
 categories: Leetcode
 tags: Dynamic-Programming Tree
-excerpt: ""
+excerpt: "日常要完"
 ---
 
 * content
