--- a/_posts/leetcode100/2020-11-26-leetcode-96.md
+++ b/_posts/leetcode100/2020-11-26-leetcode-96.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-96.不同的二叉搜索树(Unique Binary Search Trees)"
 categories: Leetcode
 tags: Dynamic-Programming Tree
-excerpt: ""
+excerpt: "新的起点"
 ---
 
 * content
@@ -47,7 +47,7 @@ Link：[https://leetcode.com/problems/unique-binary-search-trees/](https://leetc
 
 如果, 结果 = [num], 那么就只有**1种可能**，num为跟节点
 
-如果, 结果 = [num, num + 1], 那么只有**2中可能**, 其中一个数作为跟节点
+如果, 结果 = [num, num + 1], 那么只有**2种可能**, 其中一个数作为跟节点
 
 其他情况，遍历，把一个较长的递增序列, 分别按照跟节点i拆分
 
