--- a/_posts/leetcode100/2020-11-29-leetcode-97.md
+++ b/_posts/leetcode100/2020-11-29-leetcode-97.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-97.交错字符串(Interleaving String)"
 categories: Leetcode
 tags: String Dynamic-Programming
-excerpt: ""
+excerpt: "顺其自然"
 ---
 
 * content
