--- a/_posts/leetcode100/2020-07-30-leetcode-22.md
+++ b/_posts/leetcode100/2020-07-30-leetcode-22.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "22. 括号生成(Generate Parentheses)"
+title: "LeetCode-22.括号生成(Generate Parentheses)"
 categories: Leetcode
 tags: String Backtracking
 excerpt: "里程碑的21天"
@@ -9,7 +9,7 @@ excerpt: "里程碑的21天"
 * content
 {:toc}
 
-## 22. Generate Parentheses
+## 22. 括号生成
 
 数字 n 代表生成括号的对数，请你设计一个函数，用于能够生成所有可能的并且 有效的 括号组合。
 
@@ -25,6 +25,12 @@ excerpt: "里程碑的21天"
        "()()()"
      ]
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/generate-parentheses/](https://leetcode-cn.com/problems/generate-parentheses/)
+
+Link：[https://leetcode.com/problems/generate-parentheses/](https://leetcode.com/problems/generate-parentheses/)
 
 ## DFS
 
