--- a/_posts/leetcode100/2020-07-31-leetcode-23.md
+++ b/_posts/leetcode100/2020-07-31-leetcode-23.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "23. 合并K个排序链表(Merge k Sorted Lists)"
+title: "LeetCode-23.合并K个排序链表(Merge k Sorted Lists)"
 categories: Leetcode
 tags: Linked-list Heap Divide-and-conquer
 excerpt: "蜗牛与雄鹰"
@@ -13,7 +13,7 @@ excerpt: "蜗牛与雄鹰"
 
 排序超大数量级的数据，可以分成N个机器分别排序，然后把结果汇总起来。
 
-## 23. Merge k Sorted Lists
+## 23. 合并K个升序链表
 
 合并 k 个排序链表，返回合并后的排序链表。请分析和描述算法的复杂度。
 
@@ -28,6 +28,12 @@ excerpt: "蜗牛与雄鹰"
 ]
 输出: 1->1->2->3->4->4->5->6
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/merge-k-sorted-lists/](https://leetcode-cn.com/problems/merge-k-sorted-lists/)
+
+Link：[https://leetcode.com/problems/merge-k-sorted-lists/](https://leetcode.com/problems/merge-k-sorted-lists/)
 
 ## 小堆
 
