--- a/_posts/leetcode100/2020-12-01-leetcode-99.md
+++ b/_posts/leetcode100/2020-12-01-leetcode-99.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-99.恢复二叉搜索树(Recover Binary Search Tree)"
 categories: Leetcode
 tags: Tree Depth-first-search
-excerpt: ""
+excerpt: "选择"
 ---
 
 * content
@@ -58,7 +58,7 @@ BST的中序遍历，是一个递增序列
 
 我们需要找到，不满足递增的一组，把第一个记录下来first
 
-对于任意不满组的，始终把second记录下来
+对于任意不满足的，始终把second记录下来
 
 交换两个记录节点的值
 
