--- a/_posts/leetcode100/2020-11-30-leetcode-98.md
+++ b/_posts/leetcode100/2020-11-30-leetcode-98.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-98.验证二叉搜索树(Validate Binary Search Tree)"
 categories: Leetcode
 tags: String Dynamic-Programming
-excerpt: ""
+excerpt: "候鸟"
 ---
 
 * content
