--- a/_posts/leetcode100/2020-12-02-leetcode-100.md
+++ b/_posts/leetcode100/2020-12-02-leetcode-100.md
@@ -3,7 +3,7 @@ layout: post
 title: "LeetCode-100.相同的树(Recover Binary Search Tree)"
 categories: Leetcode
 tags: Tree Depth-first-search
-excerpt: ""
+excerpt: "伟大的航线"
 ---
 
 * content
@@ -93,4 +93,8 @@ class Solution:
 
 --End--
 
+这本应该在去年完成的，但发生了一些糟糕的事情，就像疫情一样突如其来，真切地感受了计划和意外不知道哪一个先到来。不过，希望大难必有后福。
 
+呼吸会变成空气，只是时间的问题，年轻时经过峰回路转的绝望，也许并不是一件坏事情。
+
+**~~3D~~2Y, 新世界见**
