--- a/_posts/leetcode100/2020-08-01-leetcode-24.md
+++ b/_posts/leetcode100/2020-08-01-leetcode-24.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "24. 两两交换链表中的节点(Swap Nodes in Pairs)"
+title: "LeetCode-24.两两交换链表中的节点(Swap Nodes in Pairs)"
 categories: Leetcode
 tags: Linked-list
 excerpt: "早安八月"
@@ -9,7 +9,7 @@ excerpt: "早安八月"
 * content
 {:toc}
 
-## 24. Swap Nodes in Pairs
+## 24. 两两交换链表中的节点
 
 给定一个链表，两两交换其中相邻的节点，并返回交换后的链表。
 
@@ -20,6 +20,12 @@ excerpt: "早安八月"
 ```
 给定 1->2->3->4, 你应该返回 2->1->4->3.
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/swap-nodes-in-pairs/](https://leetcode-cn.com/problems/swap-nodes-in-pairs/)
+
+Link：[https://leetcode.com/problems/swap-nodes-in-pairs/](https://leetcode.com/problems/swap-nodes-in-pairs/)
 
 ## 模拟法
 
