--- a/_posts/leetcode200/2020-12-10-leetcode-135.md
+++ b/_posts/leetcode200/2020-12-10-leetcode-135.md
@@ -77,7 +77,45 @@ class Solution:
 
 空间要求，一般都是非常有挑战的
 
-//TBD 解释
+对于上升区间
+
+```python
+             x
+           x x
+         x x x
+       x x x x
+
+up   = 0 1 2 3
+peak = 0 1 2 3
+down = 0 0 0 0
+
+res +=   1 2 3
+         + + +
+         1 1 1
+```
+
+对于下降区间, 下降区间最后一个一定是**一个饼干**
+
+```python
+             #
+             #         o
+             x       o o
+           x x     o o o
+         x x x   o o o o
+       x x x x o o o o o
+               |<-逆序->|
+
+up   = 0 1 2 3 0 0 0 0 0
+peak = 0 1 2 3 3 3 3 3 3
+down = 0 0 0 0 1 2 3 4 5
+
+res +=  ...    1 2 3 4 5
+                     + + 
+                     1 1
+                     # #                          
+```
+
+代码如下:
 
 ```python
 class Solution:
@@ -104,6 +142,39 @@ class Solution:
                 up = 0
                 down += 1
                 res += 1 + down + (-1 if peak >= down else 0)
+
+        return res
+```
+
+对于下降区间可以用个等差数列求和, res += N * (1 + N) / 2 
+
+```python
+class Solution:
+    def candy(self, ratings: List[int]) -> int:
+        
+        if len(ratings) == 0:
+            return 0
+        
+        res = peak = 1
+        down = 0
+        
+        for i in range(1, len(ratings)):
+            if ratings[i] >= ratings[i - 1]:
+                if (down) > 0:
+                    res += down * (down + 1) // 2
+                    res += 0 if down < peak else down - peak + 1
+                    down = 0
+                    peak = 1
+                    
+                peak = 1 if ratings[i] == ratings[i - 1] else peak + 1
+                res += peak
+        
+            else:
+                down += 1
+                
+        if down > 0:
+            res += down * (down + 1) // 2
+            res += 0 if down < peak else down - peak + 1
 
         return res
 ```
