--- a/_posts/leetcode400/2020-12-11-leetcode-435.md
+++ b/_posts/leetcode400/2020-12-11-leetcode-435.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "LeetCode-435.分发饼干(Non-overlapping Intervals)"
+title: "LeetCode-435.无重叠区间(Non-overlapping Intervals)"
 categories: Leetcode
 tags: Greedy
 excerpt: ""
