--- a/_posts/leetcode200/2020-12-10-leetcode-135.md
+++ b/_posts/leetcode200/2020-12-10-leetcode-135.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "LeetCode-135.分发饼干(Candy)"
+title: "LeetCode-135.分发糖果(Candy)"
 categories: Leetcode
 tags: Greedy
 excerpt: ""
