--- a/_posts/leetcode100/2020-11-26-leetcode-96.md
+++ b/_posts/leetcode100/2020-11-26-leetcode-96.md
@@ -2,7 +2,7 @@
 layout: post
 title: "LeetCode-96.不同的二叉搜索树(Unique Binary Search Trees)"
 categories: Leetcode
-tags: Dynamic-Programming Tree
+tags: Dynamic-programming Tree
 excerpt: "新的起点"
 ---
 
