--- a/_posts/leetcode600/2020-12-12-leetcode-605.md
+++ b/_posts/leetcode600/2020-12-12-leetcode-605.md
@@ -83,14 +83,15 @@ class Solution:
 
 计数有多少个空白出N
 
-```
+```python
 X O O O O O O O O X
 |<-------N------->|
-```
-1 - 2不能种
-3 - 4能种一个
-5 - 6能中两个
 
+# 1 - 2不能种
+# 3 - 4能种一个
+# 5 - 6能中两个
+# ...
+```
 res = (N - 1) // 2
 
 ```
@@ -99,11 +100,9 @@ O O O O O O O O O X
 X O O O O O O O O O
 ```
 
-两端比较特殊
+两端比较特殊, res = N // 2
 
-res = N // 2
-
-初始化plot = 1
+初始化plot = 1, 处理左端的情况
 
 ```python
 class Solution:
