--- a/_posts/leetcode100/2020-11-18-leetcode-88.md
+++ b/_posts/leetcode100/2020-11-18-leetcode-88.md
@@ -99,4 +99,8 @@ class Solution:
             cur -= 1
 ```
 
+## One More Thing
+
+> C++中，i++ 和 ++i 都是将i加1, 但是i++返回值为i，而++i返回值为i+1。如果只是希望增加i的值，而不需要返回值，则推荐使用++i，其运行速度会略快一些。因为i++的旧值要保存以备接下来用到。不过现代编译器应该是可以优化的
+
 --End--
