Update. 添加Index part1

--- a/_posts/leetcode100/2020-07-06-leetcode-1.md
+++ b/_posts/leetcode100/2020-07-06-leetcode-1.md
@@ -1,8 +1,9 @@
 ---
 layout: post
+index: 1
 title: "LeetCode-1.两数之和(Two Sum)"
 categories: Leetcode
-tags: Array Hash
+tags: Array Hash-table
 excerpt: "起航，Great Voyage"
 ---
 
