--- a/_posts/leetcode100/2020-07-26-leetcode-18.md
+++ b/_posts/leetcode100/2020-07-26-leetcode-18.md
@@ -1,8 +1,9 @@
 ---
 layout: post
+index: 18
 title: "LeetCode-18.四数之和(4Sum)"
 categories: Leetcode
-tags: Array Hash Two-pointers
+tags: Array Hash-table Two-pointers
 excerpt: "K-Sum终结者"
 ---
 
