--- a/_posts/leetcode200/2020-12-02-leetcode-101.md
+++ b/_posts/leetcode200/2020-12-02-leetcode-101.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 101
 title: "LeetCode-101.对称二叉树(Symmetric Tree)"
 categories: Leetcode
 tags: Tree Depth-first-search Breadth-first-search
