--- a/_posts/leetcode200/2020-12-02-leetcode-103.md
+++ b/_posts/leetcode200/2020-12-02-leetcode-103.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 103
 title: "LeetCode-103.二叉树的锯齿形层次遍历(Binary Tree Zigzag Level Order Traversal)"
 categories: Leetcode
 tags: Stack Tree Breadth-first-search
