--- a/_posts/leetcode200/2020-12-12-leetcode-167.md
+++ b/_posts/leetcode200/2020-12-12-leetcode-167.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 167
 title: "LeetCode-167.两数之和 II - 输入有序数组(Two Sum II - Input array is sorted)"
 categories: Leetcode
 tags: Array Two-pointers Binary-search
