--- a/_posts/leetcode200/2020-12-13-leetcode-122.md
+++ b/_posts/leetcode200/2020-12-13-leetcode-122.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 122
 title: "LeetCode-122.买卖股票的最佳时机 II(Best Time to Buy and Sell Stock II)"
 categories: Leetcode
 tags: Array Greedy
