--- a/_posts/leetcode100/2020-07-27-leetcode-19.md
+++ b/_posts/leetcode100/2020-07-27-leetcode-19.md
@@ -1,8 +1,9 @@
 ---
 layout: post
+index: 19
 title: "LeetCode-19.删除链表的倒数第N个节点(Remove Nth Node From End of List)"
 categories: Leetcode
-tags: Array Hash Two-pointers
+tags: Array Hash-table Two-pointers
 excerpt: "K-Sum终结者"
 ---
 
