--- a/_posts/leetcode200/2020-12-02-leetcode-104.md
+++ b/_posts/leetcode200/2020-12-02-leetcode-104.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 104
 title: "LeetCode-104.二叉树的最大深度(Maximum Depth of Binary Tree)"
 categories: Leetcode
 tags: Tree Depth-first-search Recursion
