--- a/_posts/leetcode200/2020-12-12-leetcode-142.md
+++ b/_posts/leetcode200/2020-12-12-leetcode-142.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 142
 title: "LeetCode-142.环形链表 II(Linked List Cycle II)"
 categories: Leetcode
 tags: Linked-list Two-pointers
