--- a/_posts/leetcode400/2020-12-13-leetcode-452.md
+++ b/_posts/leetcode400/2020-12-13-leetcode-452.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 452
 title: "LeetCode-452.用最少数量的箭引爆气球(Minimum Number of Arrows to Burst Balloons)"
 categories: Leetcode
 tags: Greedy Sort
