--- a/_posts/leetcode100/2020-07-09-leetcode-4.md
+++ b/_posts/leetcode100/2020-07-09-leetcode-4.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 4
 title: "LeetCode-4.寻找两个正序数组的中位数(Median of Two Sorted Arrays)"
 categories: Leetcode
 tags: Array Binary-search Divide-and-conquer
