--- a/_posts/leetcode100/2020-07-10-leetcode-5.md
+++ b/_posts/leetcode100/2020-07-10-leetcode-5.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 5
 title: "LeetCode-5.最长回文子串(Longest Palindromic Substring)"
 categories: Leetcode
 tags: String Dynamic-programming
