--- a/_posts/leetcode100/2020-07-16-leetcode-10.md
+++ b/_posts/leetcode100/2020-07-16-leetcode-10.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 10
 title: "LeetCode-10.正则表达式匹配(Regular Expression Matching)"
 categories: Leetcode
 tags: Math Dynamic-programming Backtracking
