Update. 添加Index part4

--- a/_posts/leetcode100/2020-08-11-leetcode-30.md
+++ b/_posts/leetcode100/2020-08-11-leetcode-30.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 30
 title: "30. 串联所有单词的子串(Substring with Concatenation of All Words)"
 categories: Leetcode
 tags: String Hash-table Two-pointers
