--- a/_posts/leetcode100/2020-08-17-leetcode-33.md
+++ b/_posts/leetcode100/2020-08-17-leetcode-33.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 33
 title: "33. 搜索旋转排序数组(Search in Rotated Sorted Array)"
 categories: Leetcode
 tags: Array Binary-search
