--- a/_posts/leetcode100/2020-07-31-leetcode-23.md
+++ b/_posts/leetcode100/2020-07-31-leetcode-23.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 23
 title: "LeetCode-23.合并K个排序链表(Merge k Sorted Lists)"
 categories: Leetcode
 tags: Linked-list Heap Divide-and-conquer
