--- a/_posts/leetcode100/2020-08-04-leetcode-26.md
+++ b/_posts/leetcode100/2020-08-04-leetcode-26.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 26
 title: "26. 删除排序数组中的重复项(Remove Duplicates from Sorted Array)"
 categories: Leetcode
 tags: Array Two-pointers
