--- a/_posts/leetcode100/2020-08-16-leetcode-32.md
+++ b/_posts/leetcode100/2020-08-16-leetcode-32.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 32
 title: "32. 最长有效括号(Longest Valid Parentheses)"
 categories: Leetcode
 tags: String Dynamic-programming
