--- a/_posts/leetcode100/2020-09-05-leetcode-44.md
+++ b/_posts/leetcode100/2020-09-05-leetcode-44.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 44
 title: "44. 通配符匹配(Wildcard Matching)"
 categories: Leetcode
 tags: String Dynamic-programming Backtracking Greedy
