--- a/_posts/leetcode100/2020-10-28-leetcode-76.md
+++ b/_posts/leetcode100/2020-10-28-leetcode-76.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 76
 title: "LeetCode-76.最小覆盖子串(Minimum Window Substring)"
 categories: Leetcode
 tags: Hash-table Two-pointers String Sliding-window
