--- a/_posts/leetcode100/2020-10-28-leetcode-77.md
+++ b/_posts/leetcode100/2020-10-28-leetcode-77.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 77
 title: "LeetCode-77.组合(Combinations)"
 categories: Leetcode
 tags: Array Backtracking Bit-manipulation
