--- a/_posts/leetcode100/2020-11-02-leetcode-80.md
+++ b/_posts/leetcode100/2020-11-02-leetcode-80.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 80
 title: "LeetCode-80.删除排序数组中的重复项 II(Remove Duplicates from Sorted Array II)"
 categories: Leetcode
 tags: Array Two-pointers
