--- a/_posts/leetcode100/2020-11-02-leetcode-81.md
+++ b/_posts/leetcode100/2020-11-02-leetcode-81.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 81
 title: "LeetCode-81.搜索旋转排序数组 II(Search in Rotated Sorted Array II)"
 categories: Leetcode
 tags: Array Binary-search
