--- a/_posts/leetcode100/2020-11-02-leetcode-83.md
+++ b/_posts/leetcode100/2020-11-02-leetcode-83.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 83
 title: "LeetCode-83.删除排序链表中的重复元素(Remove Duplicates from Sorted List)"
 categories: Leetcode
 tags: Linked-list
