--- a/_posts/leetcode100/2020-11-03-leetcode-84.md
+++ b/_posts/leetcode100/2020-11-03-leetcode-84.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 84
 title: "LeetCode-84.柱状图中最大的矩形(Largest Rectangle in Histogram)"
 categories: Leetcode
 tags: Stack Array
