--- a/_posts/leetcode100/2020-11-25-leetcode-94.md
+++ b/_posts/leetcode100/2020-11-25-leetcode-94.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 94
 title: "LeetCode-94.二叉树的中序遍历(Binary Tree Inorder Traversal)"
 categories: Leetcode
 tags: Hash-table Stack Tree
