--- a/_posts/leetcode100/2020-11-26-leetcode-95.md
+++ b/_posts/leetcode100/2020-11-26-leetcode-95.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 95
 title: "LeetCode-95.不同的二叉搜索树 II(Unique Binary Search Trees II)"
 categories: Leetcode
 tags: Dynamic-programming Tree
