--- a/_posts/leetcode100/2020-11-26-leetcode-96.md
+++ b/_posts/leetcode100/2020-11-26-leetcode-96.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 96
 title: "LeetCode-96.不同的二叉搜索树(Unique Binary Search Trees)"
 categories: Leetcode
 tags: Dynamic-programming Tree
