--- a/_posts/leetcode100/2020-11-30-leetcode-98.md
+++ b/_posts/leetcode100/2020-11-30-leetcode-98.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 98
 title: "LeetCode-98.验证二叉搜索树(Validate Binary Search Tree)"
 categories: Leetcode
 tags: String Dynamic-programming
