--- a/_posts/leetcode100/2020-12-02-leetcode-100.md
+++ b/_posts/leetcode100/2020-12-02-leetcode-100.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 100
 title: "LeetCode-100.相同的树(Recover Binary Search Tree)"
 categories: Leetcode
 tags: Tree Depth-first-search
