--- a/_posts/leetcode100/2020-11-02-leetcode-82.md
+++ b/_posts/leetcode100/2020-11-02-leetcode-82.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 82
 title: "LeetCode-82.删除排序链表中的重复元素 II(Remove Duplicates from Sorted List II)"
 categories: Leetcode
 tags: Linked-list
