--- a/_posts/leetcode100/2020-11-29-leetcode-97.md
+++ b/_posts/leetcode100/2020-11-29-leetcode-97.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 97
 title: "LeetCode-97.交错字符串(Interleaving String)"
 categories: Leetcode
 tags: String Dynamic-programming
