--- a/_posts/leetcode100/2020-12-01-leetcode-99.md
+++ b/_posts/leetcode100/2020-12-01-leetcode-99.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+index: 99
 title: "LeetCode-99.恢复二叉搜索树(Recover Binary Search Tree)"
 categories: Leetcode
 tags: Tree Depth-first-search
