--- a/_posts/leetcode200/2020-12-02-leetcode-101.md
+++ b/_posts/leetcode200/2020-12-02-leetcode-101.md
@@ -4,7 +4,7 @@ index: 101
 title: "LeetCode-101.对称二叉树(Symmetric Tree)"
 categories: Leetcode
 tags: Tree Depth-first-search Breadth-first-search
-excerpt: ""
+excerpt: "巅峰之上"
 ---
 
 * content
@@ -40,7 +40,7 @@ excerpt: ""
 
 Link：[https://leetcode.com/problems/symmetric-tree/](https://leetcode.com/problems/symmetric-tree/)
 
-## 深度优先搜索
+## 递归
 
 O(N)
 
@@ -90,13 +90,41 @@ class Solution:
         return left is right
 ```
 
+非递归版本
+
+```python
+class Solution:
+    def isSymmetric(self, root: TreeNode) -> bool:
+        if root is None:
+            return True
+        
+        stack = []
+        stack.append(root.left)
+        stack.append(root.right)
+        
+        while len(stack) > 0:
+            left = stack.pop()
+            right = stack.pop()
+            
+            if left is None and right is None:
+                continue
+                
+            if left is None or right is None or left.val != right.val:
+                return False
+            
+            stack.append(left.left)
+            stack.append(right.right)
+            stack.append(left.right)
+            stack.append(right.left)
+            
+        return True
+```
+
 ## 广度优先搜索
 
 O(N)
 
 一层层遍历，判断每一层是否是个回文
-
-倒是可以把DFS，修改成非递归的版本，但是个人觉得BFS更简单些
 
 ```python
 from collections import deque
