--- a/_posts/leetcode200/2020-12-02-leetcode-102.md
+++ b/_posts/leetcode200/2020-12-02-leetcode-102.md
@@ -43,6 +43,8 @@ Link：[https://leetcode.com/classic/problems/binary-tree-level-order-traversal]
 
 O(N)
 
+在广度优先搜索的基础上，需要记录下当前层级有多少个节点，然后把节点值放入到结果中
+
 ```python
 class Solution:
     def levelOrder(self, root: TreeNode) -> List[List[int]]:
@@ -67,6 +69,33 @@ class Solution:
             res.append(level)
             
         return res
+```
+
+## 深度优先搜索
+
+O(N)
+
+需要多传递一个参数，及深度，来记录访问到那一层，才能将对应的节点值添加到对应层级结果中
+
+```python
+ class Solution:
+    def levelOrder(self, root: TreeNode) -> List[List[int]]:
+        res = []
+        self.helper(root, 0, res)
+        return res
+    
+    def helper(self, root: TreeNode, height: int, res: List[List[int]]):
+        
+        if root is None:
+            return
+        
+        if (len(res) == height):
+            res.append([])
+            
+        res[height].append(root.val)
+        
+        self.helper(root.left, height + 1, res)
+        self.helper(root.right, height + 1, res)
 ```
 
 --End--
