--- a/_posts/leetcode100/2020-08-03-leetcode-25.md
+++ b/_posts/leetcode100/2020-08-03-leetcode-25.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 25
-title: "25. K 个一组翻转链表(Reverse Nodes in k-Group)"
+title: "LeetCode-25.K个一组翻转链表(Reverse Nodes in k-Group)"
 categories: Leetcode
 tags: Linked-list
 excerpt: "火力全开"
@@ -12,7 +12,7 @@ excerpt: "火力全开"
 
 这道题是前面[Swap Nodes in Pairs](http://geemaple.github.io/2020/08/01/leetcode-24/)的Follow-up
 
-## 25. Reverse Nodes in k-Group
+## 25. K个一组翻转链表
 
 给你一个链表，每 k 个节点一组进行翻转，请你返回翻转后的链表。
 
@@ -35,6 +35,11 @@ k 是一个正整数，它的值小于或等于链表的长度。
 你的算法只能使用常数的额外空间。
 你不能只是单纯的改变节点内部的值，而是需要实际进行节点交换。
 
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/reverse-nodes-in-k-group/](https://leetcode-cn.com/problems/reverse-nodes-in-k-group/)
+
+Link：[https://leetcode.com/problems/reverse-nodes-in-k-group/](https://leetcode.com/problems/reverse-nodes-in-k-group/)
    
 ## 模拟法
 
