--- a/_posts/leetcode100/2020-08-04-leetcode-26.md
+++ b/_posts/leetcode100/2020-08-04-leetcode-26.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 26
-title: "26. 删除排序数组中的重复项(Remove Duplicates from Sorted Array)"
+title: "LeetCode-26.删除排序数组中的重复项(Remove Duplicates from Sorted Array)"
 categories: Leetcode
 tags: Array Two-pointers
 excerpt: "Kali"
@@ -10,7 +10,7 @@ excerpt: "Kali"
 * content
 {:toc}
 
-## 26. Remove Duplicates from Sorted Array
+## 26. 删除排序数组中的重复项
 
 给一个排序数组，你需要"原地"删除重复出现的元素，使得每个元素只出现一次，返回移除后数组的新长度。
 
@@ -51,6 +51,12 @@ for (int i = 0; i < len; i++) {
     print(nums[i]);
 }
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/)
+
+Link：[https://leetcode.com/problems/remove-duplicates-from-sorted-array/](https://leetcode.com/problems/remove-duplicates-from-sorted-array/)
 
 ## 双指针
 
