--- a/_posts/leetcode100/2020-07-09-leetcode-4.md
+++ b/_posts/leetcode100/2020-07-09-leetcode-4.md
@@ -99,6 +99,45 @@ nums2 = [3, 4, inf, ...]
 **注意，k = 1时候的边界判断**
 
 ```python
+from typing import List
+class Solution:
+    def findMedianSortedArrays(self, nums1: List[int], nums2: List[int]) -> float:
+        
+        m = len(nums1)
+        n = len(nums2)
+        
+        k = (m + n + 1) // 2
+        val = self.findKthNumber(nums1, nums2, k)
+        if (m + n) % 2 == 0:
+            val += self.findKthNumber(nums1, nums2, k + 1)
+            return val / 2
+        else:
+            return val
+        
+    def findKthNumber(self, nums1: List[int], nums2: List[int], k: int) -> float:
+        
+        if len(nums1) == 0:
+            return nums2[k - 1]
+            
+        if len(nums2) == 0:
+            return nums1[k - 1]
+            
+        if k == 1:
+            return min(nums1[0], nums2[0])
+            
+        mid = k // 2
+        val1 = nums1[mid - 1] if mid <= len(nums1) else float('inf')
+        val2 = nums2[mid - 1] if mid <= len(nums2) else float('inf')
+        
+        if val1 <= val2:
+            return self.findKthNumber(nums1[mid:], nums2, k - mid)
+        else:
+            return self.findKthNumber(nums1, nums2[mid:], k - mid)
+```
+
+使用起始坐标，这样变量多了些，但是不用在每次拷贝数组
+
+```python
 class Solution:
     def findMedianSortedArrays(self, nums1: List[int], nums2: List[int]) -> float:
         count = len(nums1) + len(nums2)
