--- a/_drafts/229.md
+++ b/_drafts/229.md
@@ -22,29 +22,35 @@ Boyer-Moore
 结论是，一段N的数组切成K段，那么最多有K - 1个答案
 
 代码实现
-def majorityElement(self, nums):
-    """
-    :type nums: List[int]
-    :rtype: List[int]
-    """
-    count1, count2, candidate1, candidate2 = 0, 0, 0, 1
 
-    for n in nums:
-        if n == candidate1:
-            count1 += 1
-        elif n == candidate2:
-            count2 += 1
-        elif count1 == 0:
-            count1, candidate1 = 1, n
-        elif count2 == 0:
-            count2, candidate2 = 1, n
-        else:
-            count1 -= 1
-            count2 -= 1
-
-    return [n for n in (candidate1, candidate2) if nums.count(n) > len(nums)//3]
-github地址：
-
-geemaple/algorithm
+```python
+from typing import List
+class Solution:
+    def majorityElement(self, nums: List[int]) -> List[int]:
+        if len(nums) <= 1:
+            return nums
+            
+        first = None
+        second = None
+        first_count = 0
+        second_count = 0
+        
+        for i in range(len(nums)):
+            if first == nums[i]:
+                first_count += 1
+            elif second == nums[i]:
+                second_count += 1
+            elif first_count == 0:
+                first = nums[i]
+                first_count = 1
+            elif second_count == 0:
+                second = nums[i]
+                second_count = 1
+            else:
+                first_count -= 1
+                second_count -= 1
+    
+        return [n for n in (first, second) if nums.count(n) > len(nums) / 3]
+```
 
 -end-
