--- a/_posts/leetcode600/2020-12-16-leetcode-633.md
+++ b/_posts/leetcode600/2020-12-16-leetcode-633.md
@@ -58,6 +58,8 @@ Link：[https://leetcode.com/problems/sum-of-square-numbers/](https://leetcode.c
 
 ## 双指针
 
+O(sqrt(N))
+
 这个是Two Sum的变形题之一
 
 ```python
