--- a/_posts/leetcode100/2020-08-05-leetcode-27.md
+++ b/_posts/leetcode100/2020-08-05-leetcode-27.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 27
-title: "27. 移除元素(Remove Element)"
+title: "LeetCode-27.移除元素(Remove Element)"
 categories: Leetcode
 tags: Array Two-pointers
 excerpt: "黑灰白"
@@ -53,6 +53,12 @@ for (int i = 0; i < len; i++) {
     print(nums[i]);
 }
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/remove-element/](https://leetcode-cn.com/problems/remove-element/)
+
+Link：[https://leetcode.com/problems/remove-element/](https://leetcode.com/problems/remove-element/)
 
 ## 双指针
 
