--- a/_posts/leetcode200/2020-12-02-leetcode-104.md
+++ b/_posts/leetcode200/2020-12-02-leetcode-104.md
@@ -4,11 +4,13 @@ index: 104
 title: "LeetCode-104.二叉树的最大深度(Maximum Depth of Binary Tree)"
 categories: Leetcode
 tags: Tree Depth-first-search Recursion
-excerpt: ""
+excerpt: "一山不容二虎"
 ---
 
 * content
 {:toc}
+
+> 递归其实挺难的，最开始自己很难想到如何直接写，得用一个helper函数才能写下去
 
 ## 104. 二叉树的最大深度
 
@@ -38,7 +40,13 @@ excerpt: ""
 Link：[https://leetcode.com/problems/maximum-depth-of-binary-tree/](https://leetcode.com/problems/maximum-depth-of-binary-tree/)
 
 
-## 递归
+## 递归-分治
+
+O(N)
+
+跟节点有两个小弟，询问两个小弟哪边深度大一些，再把最大值加一返回即可
+
+递归的出口是遇到空节点，返回其深度0
 
 ```python
 class Solution:
@@ -52,6 +60,8 @@ class Solution:
 ## 广度优先搜索
 
 O(N)
+
+我们使用层级遍历，每当遍历新的层级，结果加一
 
 ```python
 from collections import deque
