--- a/_posts/leetcode100/2020-08-06-leetcode-28.md
+++ b/_posts/leetcode100/2020-08-06-leetcode-28.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 28
-title: "28. 实现 strStr()(Implement strStr())"
+title: "LeetCode-28.实现 strStr()(Implement strStr())"
 categories: Leetcode
 tags: String Two-pointers
 excerpt: "薛定谔的难度"
@@ -10,7 +10,7 @@ excerpt: "薛定谔的难度"
 * content
 {:toc}
 
-## 28. Implement strStr()
+## 28. 实现 strStr()
 
 实现C语言中的strStr()函数。
 
@@ -35,6 +35,12 @@ excerpt: "薛定谔的难度"
 当 needle 是空字符串时，我们应当返回什么值呢？这是一个在面试中很好的问题。
 
 对于本题而言，当 needle 是空字符串时我们应当返回 0 。这与C语言的 strstr() 以及 Java的 indexOf() 定义相符。
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/implement-strstr/](https://leetcode-cn.com/problems/implement-strstr/)
+
+Link：[https://leetcode.com/problems/implement-strstr/](https://leetcode.com/problems/implement-strstr/)
 
 ## 暴力破解
 
