--- a/_posts/leetcode100/2020-07-16-leetcode-10.md
+++ b/_posts/leetcode100/2020-07-16-leetcode-10.md
@@ -107,38 +107,46 @@ table[i][j] = True, 代表s前i个字符能够和p前j个字符匹配
 
 条件1, 最后一步, s和p最后两个字母相等**或者**p最后一个字母是'.' 
 
-```
+```python
 xxxxxxxxxxxx  a
 xxxxxxxxxxxx  a
 
 xxxxxxxxxxxx  a
 xxxxxxxxxxxx  .
 
-table[i][j] = ((p[i] == s[i] or p[i] == '.') and table[i - 1][j - 1])
+table[i][j] = ((p[i - i] == s[i - i] or p[i - i] == '.') and table[i - 1][j - 1])
 ```
 
 条件2, 最后一步, p最后一个是\*, 无论是否能够匹配, 字符\*都可以零次展开
 
-```
+```python
 xxxxxxxxxxx x  a
 xxxxxxxxxxx a  *
+            ^
 
 xxxxxxxxxxx x  a
 xxxxxxxxxxx c  *
+            ^
+# 0次展开，消耗p字符串*前面的一个字母, 用^来标记, 但s保持不变
 
 table[i][j] = table[i][j - 2]
 ```
 
-条件3, p最后一个是\*, 当\*多次展开, p前面的字母**符合**条件1
+条件3, p最后一个是\*, 当\*一次展开时: (0和1次展开, 就可以覆盖0...k次的情况)
 
-```
+```python                                      
 xxxxxxxxxxx x  a          xxxxxxxxxxx x  a
-xxxxxxxxxxx a  *          xxxxxxxxxxx a  a
+                                         ^
+xxxxxxxxxxx a  *          xxxxxxxxxxx a  a  *
+                                         
                     ->
 xxxxxxxxxxx x  a          xxxxxxxxxxx x  a
-xxxxxxxxxxx .  *          xxxxxxxxxxx .  .
+                                         ^
+xxxxxxxxxxx .  *          xxxxxxxxxxx .  .  *       
 
-table[i][j] = (p[i - 2] == s[i] or p[i - 2] == '.') and table[i - 1][j - 2])
+# 1次展开，消耗掉s字符串^对应的字母，但是p保持不变
+
+table[i][j] = (p[j - 2] == s[i] or p[i - 2] == '.') and table[i - 1][j])
 ```
 
 所有条件，只要有一个可以匹配，就可以认为匹配
@@ -177,16 +185,15 @@ class Solution:
 
                 if p[j - 1] != '*':
                     if i - 1 >= 0 and (p[j - 1] == '.' or p[j - 1] == s[i- 1]):
-                        table[i][j] = table[i - 1][j - 1] # 条件1
+                        table[i][j] = table[i - 1][j - 1] # 尾字母可匹配
                 else:
                     if j - 2 >= 0:
-                        table[i][j] = table[i][j - 2] # 条件3
+                        table[i][j] = table[i][j - 2] # 0次展开
 
                         if i - 1 >= 0 and (p[j - 2] == '.' or p[j - 2] == s[i - 1]):
-                            table[i][j] = table[i][j] or table[i - 1][j] # 条件2
+                            table[i][j] = table[i][j] or table[i - 1][j] # 1次展开
 
         return table[m][n]
-
 ```
 
 --End--
