--- a/_drafts/263.md
+++ b/_drafts/263.md
@@ -1,3 +1,12 @@
+---
+layout: post
+index: 263
+title: "LeetCode-263."
+categories: Leetcode
+tags: 
+excerpt: 
+---
+
 编写一个程序判断给定的数是否为丑数。
 丑数就是只包含质因数 2, 3, 5 的正整数。
 示例 1:
@@ -25,6 +34,33 @@
 这是一道数学题/模拟题，首先要确保0和负数返回False。然后判断num能被(2,3,5)整除即可
 
 代码实现
+
+## 递归
+
+```
+class Solution:
+    def isUgly(self, num: int) -> bool:
+        if num < 1:
+            return False
+    
+        if num == 1:
+            return True
+            
+        if num % 5 == 0:
+            return self.isUgly(num // 5)
+            
+        if num % 3 == 0:
+            return self.isUgly(num // 3)
+            
+        if num % 2 == 0:
+            return self.isUgly(num // 2)
+            
+        return False
+```
+
+## 非递归
+
+```
 def isUgly(self, num):
     """
     :type num: int
@@ -40,8 +76,6 @@ def isUgly(self, num):
             test = test // n
 
     return test == 1
-github地址：
-
-https://github.com/geemaple/algorithm
+```
 
 -end-
