--- a/_posts/leetcode100/2020-08-10-leetcode-29.md
+++ b/_posts/leetcode100/2020-08-10-leetcode-29.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 29
-title: "29. 两数相除(Divide Two Integers)"
+title: "LeetCode-29.两数相除(Divide Two Integers)"
 categories: Leetcode
 tags: Math Binary-search
 excerpt: "两数相除，却不让用乘除法"
@@ -39,6 +39,12 @@ excerpt: "两数相除，却不让用乘除法"
 被除数和除数均为 32 位有符号整数。
 除数不为 0。
 假设我们的环境只能存储 32 位有符号整数，其数值范围是 [−231,  231 − 1]。**本题中，如果除法结果溢出，则返回 231 − 1。**
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/divide-two-integers/](https://leetcode-cn.com/problems/divide-two-integers/)
+
+Link：[https://leetcode.com/problems/divide-two-integers/](https://leetcode.com/problems/divide-two-integers/)
 
 ## 暴力破解
 
