--- a/_posts/leetcode200/2020-12-03-leetcode-106.md
+++ b/_posts/leetcode200/2020-12-03-leetcode-106.md
@@ -4,7 +4,7 @@ index: 106
 title: "LeetCode-106.从中序与后序遍历序列构造二叉树(Construct Binary Tree from Inorder and Postorder Traversal)"
 categories: Leetcode
 tags: Array Tree Depth-first-search
-excerpt: ""
+excerpt: "黑魔法"
 ---
 
 * content
