Add. 圣诞多线程集合

--- a/_posts/2020-12-25-锁的实现.md
+++ b/_posts/2020-12-25-锁的实现.md
@@ -278,18 +278,106 @@ void unlock(lock_t *mutex)
 
 值得注意的是，在park()调用之前，如果别切走，儿另一个线程刚好调到unpark()，切回来，该线程会永远睡眠下去
 
-Solaris通过第三个系统调用，separk()来解决这一问题。表明准备休眠，但又被另一个唤醒，那么久不睡了
+Solaris通过第三个系统调用，separk()来解决这一问题。表明准备休眠，但又被另一个唤醒，那么就不睡了
 
 ## 两阶段锁
 
-//TBD, 以后贴个源码啥的吧
-
 Linux采用一种古老的锁方案，多年来不断被采用，可以追溯到20世纪60年代早期的Dahm锁， 现在也称两阶段锁(two-phase lock)。
 
-两阶段锁意识到自旋可能很有用，游戏在很快就要释放锁的场景。
+两阶段锁意识到自旋可能很有用，尤其在很快就要释放锁的场景。
 
 1. 第一阶段自旋锁先自旋固定次数
 2. 第二阶段，如果仍没有获取锁，则调用者会睡眠，直到锁可用
 
+## 信号量
+
+```cpp
+typedef struct zemaphore_t {
+    int value;
+    pthread_cond_t cond;
+    pthread_mutex_t lock;
+} zemaphore_t;
+
+void z_init(zemaphore_t *s, int value)
+{
+    s->value = value;
+    pthread_cond_init(&s->cond, NULL);
+    pthread_mutex_init(&s->lock, NULL);
+}
+
+void z_wait(zemaphore_t *s)
+{
+    pthread_mutex_lock(&s->lock);
+    while (s->value <= 0) {
+        pthread_cond_wait(&s->cond, &s->lock);
+    }
+    s->value--;
+    pthread_mutex_unlock(&s->lock);
+}
+
+void z_post(zemaphore_t *s)
+{
+    pthread_mutex_lock(&s->lock);
+    s->value++;
+    pthread_cond_signal(&s->cond);
+    pthread_mutex_unlock(&s->lock);
+}
+```
+
+## 读写锁
+
+//TBD 读优先/写优先
+
+```cpp
+#include <pthread/pthread.h>
+#include <semaphore.h>
+
+typedef struct rwlock_t {
+    sem_t *lock;
+    sem_t *writeLock;
+    int readers;
+} rwlock_t;
+
+void rwlock_init(rwlock_t *rw)
+{
+    sem_unlink("lock");
+    sem_unlink("writeLock");
+    
+    rw->readers = 0;
+    rw->lock = sem_open("lock", O_CREAT | O_EXCL, S_IRWXU, 1);
+    rw->writeLock = sem_open("writeLock", O_CREAT | O_EXCL, S_IRWXU, 1);
+}
+
+void rwlock_acquire_readlock(rwlock_t *rw)
+{
+    sem_wait(rw->lock);
+    rw->readers++;
+    if (rw->readers == 1) {
+        sem_wait(rw->writeLock); // 第一个读者获取写锁
+    }
+    sem_post(rw->lock);
+}
+
+void rwlock_release_readlock(rwlock_t *rw)
+{
+    sem_wait(rw->lock);
+    rw->readers--;
+    if (rw->readers == 0) {
+        sem_post(rw->writeLock); //最后一个读者放弃锁
+    }
+    
+    sem_post(rw->lock);
+}
+
+void rwlock_aquire_writelock(rwlock_t *rw)
+{
+    sem_wait(rw->writeLock);
+}
+
+void rwlock_release_writelock(rwlock_t *rw)
+{
+    sem_post(rw->writeLock);
+}
+```
 
 --END--
