--- a/_posts/leetcode/leetcode300/2021-01-01-leetcode-340.md
+++ b/_posts/leetcode/leetcode300/2021-01-01-leetcode-340.md
@@ -4,7 +4,7 @@ index: 340
 title: "LeetCode-340.至多包含K个不同字符的最长子串(Longest Substring with At Most K Distinct Characters)"
 categories: Leetcode
 tags: Hash-table Two-pointers String Sliding-window
-excerpt: 
+excerpt: ""
 ---
 
 * content
