--- a/_posts/leetcode/leetcode200/2021-01-05-leetcode-153.md
+++ b/_posts/leetcode/leetcode200/2021-01-05-leetcode-153.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 153
-title: "LeetCode-153.寻找旋转排序数组中的最小值"
+title: "LeetCode-153.寻找旋转排序数组中的最小值(Find Minimum in Rotated Sorted Array)"
 categories: Leetcode
 tags: Array Binary-search
 excerpt: ""
