--- a/_posts/leetcode/leetcode200/2021-01-05-leetcode-154.md
+++ b/_posts/leetcode/leetcode200/2021-01-05-leetcode-154.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 154
-title: "LeetCode-154.寻找旋转排序数组中的最小值 II"
+title: "LeetCode-154.寻找旋转排序数组中的最小值 II(Find Minimum in Rotated Sorted Array II)"
 categories: Leetcode
 tags: Array Binary-search
 excerpt: ""
@@ -10,7 +10,7 @@ excerpt: ""
 * content
 {:toc}
 
-## 153. 寻找旋转排序数组中的最小值
+## 154. 寻找旋转排序数组中的最小值 II
 
 假设按照升序排序的数组在预先未知的某个点上进行了旋转。例如，数组 [0,1,2,4,5,6,7] 可能变为 [4,5,6,7,0,1,2] 。
 
@@ -48,9 +48,9 @@ nums 原来是一个升序排序的数组，但在预先未知的某个点上进
 
 来源：力扣（LeetCode）
 
-链接：[https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array/description/](https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array/description/)
+链接：[https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array/](https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array/)
 
-Link：[https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/description/](https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/description/)
+Link：[https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/](https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/)
 
 
 ## 暴力破解
